examples/rejected/centering_wrong.urdr
# MUST FAIL AT RUN: claims the integer centering operator is a TRUE projection
# over Z (M^2 = M). It is not: M = nI - J satisfies M^2 = nM, so for n=5
# M(Mx) = 5*Mx != Mx. The wrong-projection claim dies (URDR-ASSERT) -- this is
# the non-vacuity of the centering seal. signum != res.
n := 5
x := [3, 1, 4, 1, 5]
idx := range(n)
sumv := \fn v |-> \fo(v, 0, \fn a e |-> a + e)
mcenter := \fn v |-> \fo(idx, [], \fn a i |-> push(a, n * nth(v, i) - sumv(v)))
mx := mcenter(x)
=?(mcenter(mx), mx)
